# mauikit-texteditor-src

./: CMakeLists.txt  Mainpage.dox  README.md
examples/: ColorSchemesPage.qml  TextEditor.qml
src/: CMakeLists.txt
src/code/: documenthandler.cpp  documenthandler.h  texteditor_plugin.cpp  texteditor_plugin.h
src/controls.6/: CodeEditor.qml  ColorSchemesPage.qml  SimpleTextEditor.qml  TextEditor.qml  TextViewer.qml
